Updated a emotion code
Updated a emotion code

--- a/Heart_Shape.ipynb
+++ b/Heart_Shape.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
       "And I am growing fast too! \n",
       "People love me these days alot.\n",
       "You have two options: Yes or No.\n",
-      "Take a minute to think before saying No. Coz you will be regretting for not entering in my life! :wink: \n",
+      "Take a minute to think before saying No. Coz you will be regretting for not entering in my life! 😉\n",
       "\n",
       "If you love to enter in my life. Please enter Yes (Remember, I am senstive. Enter exactly as I mentioned):Yes\n",
       "Now enter your name. I will show you how much I am fond of you! : Python\n",
@@ -105,7 +105,7 @@
     "print('Forget to tell about me, I am intelligent. You do not have to declare your emotions(input type) to me like you declare to others(languages).')\n",
     "print('I am easier to learn! I am faster and now into everything. \\nAnd I am growing fast too! \\nPeople love me these days alot.')\n",
     "print('You have two options: Yes or No.')\n",
-    "print(emoji.emojize('Take a minute to think before saying No. Coz you will be regretting for not entering in my life! :wink: \\n'))\n",
+    "print(emoji.emojize('Take a minute to think before saying No. Coz you will be regretting for not entering in my life! :wink:\\n',use_aliases=True))\n",
     "inp = input('If you love to enter in my life. Please enter Yes (Remember, I am senstive. Enter exactly as I mentioned):')\n",
     "\n",
     "if inp == 'Yes':\n",
